--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body {
 }
 
 #app {
+  position: relative;
   width: 1920px;
   height: 1080px;
   overflow: hidden;
@@ -29,5 +30,5 @@ body {
   right: 0;
   bottom: 0;
   background: #fff;
-  padding: 20px;
+  padding: 30px 20px;
 }
